News for pip
============

hg tip
------

* Added support for the ``https`` and ``http-static`` schemes to the
  Mercurial and ``ftp`` scheme to the Bazaar backend.

* Fixed uninstallation of scripts installed with easy_install.

* Fixed an issue in the package finder that could result in an
  infinite loop while looking for links.

0.6
---

* Add ``pip uninstall`` and uninstall-before upgrade (from Carl
  Meyer).

* Extended configurability with config files and environment variables.

* Allow packages to be upgraded, e.g., ``pip install Package==0.1``
  then ``pip install Package==0.2``.

* Allow installing/upgrading to Package==dev (fix "Source version does not
  match target version" errors).

* Added command and option completion for bash and zsh.

* Extended integration with virtualenv by providing an option to
  automatically use an active virtualenv and an option to warn if no active
  virtualenv is found.

* Fixed a bug with pip install --download and editable packages, where
  directories were being set with 0000 permissions, now defaults to 755.

* Fixed uninstallation of easy_installed console_scripts.

* Fixed uninstallation on Mac OS X Framework layout installs

* Fixed bug preventing uninstall of editables with source outside venv.

* Creates download cache directory if not existing.

0.5.1
-----

* Fixed a couple little bugs, with git and with extensions.

0.5
---

* Added ability to override the default log file name (``pip-log.txt``)
  with the environmental variable ``$PIP_LOG_FILE``.

* Made the freeze command print installed packages to stdout instead of
  writing them to a file. Use simple redirection (e.g.
  ``pip freeze > stable-req.txt``) to get a file with requirements.

* Fixed problem with freezing editable packages from a Git repository.

* Added support for base URLs using ``<base href='...'>`` when parsing
  HTML pages.

* Fixed installing of non-editable packages from version control systems.
